--- a/UIDesigner/Food_add_dialog_ui.ui
+++ b/UIDesigner/Food_add_dialog_ui.ui
@@ -2,38 +2,23 @@
 <ui version="4.0">
  <class>Form</class>
  <widget class="QWidget" name="Form">
-  <property name="enabled">
-   <bool>true</bool>
-  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>600</height>
+    <width>1280</width>
+    <height>860</height>
    </rect>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>700</width>
-    <height>600</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>700</width>
-    <height>600</height>
-   </size>
-  </property>
   <property name="windowTitle">
-   <string>Food Add Dialog</string>
+   <string>Form</string>
   </property>
-  <widget class="QPushButton" name="foodDai_ok_bt">
+  <widget class="QPushButton" name="foodDai_delete_bt">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>510</y>
-     <width>93</width>
+     <x>1000</x>
+     <y>310</y>
+     <width>131</width>
      <height>51</height>
     </rect>
    </property>
@@ -43,16 +28,44 @@
     </font>
    </property>
    <property name="text">
-    <string>Ok</string>
+    <string>Delete</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="foodDai_search_cb">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>91</y>
+     <width>611</width>
+     <height>41</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>170</y>
+     <width>291</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Current choose food</string>
    </property>
   </widget>
   <widget class="QScrollArea" name="foodDai_scrollArea">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>80</y>
-     <width>351</width>
-     <height>481</height>
+     <x>170</x>
+     <y>230</y>
+     <width>611</width>
+     <height>541</height>
     </rect>
    </property>
    <property name="widgetResizable">
@@ -63,87 +76,64 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>349</width>
-      <height>479</height>
+      <width>609</width>
+      <height>539</height>
      </rect>
     </property>
    </widget>
   </widget>
-  <widget class="QLineEdit" name="foodDai_search_textEdit">
+  <widget class="QPushButton" name="foodDai_save_bt">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>30</y>
-     <width>171</width>
-     <height>31</height>
+     <x>990</x>
+     <y>710</y>
+     <width>131</width>
+     <height>51</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QPushButton" name="foodDai_search_bt">
-   <property name="geometry">
-    <rect>
-     <x>310</x>
-     <y>30</y>
-     <width>31</width>
-     <height>31</height>
-    </rect>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
    <property name="text">
-    <string>O-</string>
+    <string>Save</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QPushButton" name="foodDai_add_bt">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>30</y>
+     <x>1000</x>
+     <y>210</y>
+     <width>131</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Add</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="foodDai_back_bt">
+   <property name="geometry">
+    <rect>
+     <x>1140</x>
+     <y>50</y>
      <width>81</width>
      <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>16</pointsize>
+     <pointsize>8</pointsize>
     </font>
    </property>
    <property name="text">
-    <string>search</string>
-   </property>
-  </widget>
-  <widget class="QScrollArea" name="foodDai_user_scrollArea">
-   <property name="geometry">
-    <rect>
-     <x>410</x>
-     <y>80</y>
-     <width>261</width>
-     <height>411</height>
-    </rect>
-   </property>
-   <property name="widgetResizable">
-    <bool>true</bool>
-   </property>
-   <widget class="QWidget" name="scrollAreaWidgetContents_2">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>259</width>
-      <height>409</height>
-     </rect>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QPushButton" name="foodDai_clear_bt">
-   <property name="geometry">
-    <rect>
-     <x>350</x>
-     <y>30</y>
-     <width>41</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>clear</string>
+    <string>back</string>
    </property>
   </widget>
  </widget>
