--- a/UIDesigner/Exercise_add_dialog_ui.ui
+++ b/UIDesigner/Exercise_add_dialog_ui.ui
@@ -2,38 +2,23 @@
 <ui version="4.0">
  <class>Form</class>
  <widget class="QWidget" name="Form">
-  <property name="enabled">
-   <bool>true</bool>
-  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>600</height>
+    <width>1280</width>
+    <height>860</height>
    </rect>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>700</width>
-    <height>600</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>700</width>
-    <height>600</height>
-   </size>
-  </property>
   <property name="windowTitle">
-   <string>Exercise Add Dialog</string>
+   <string>Form</string>
   </property>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="exerciseDai_save_bt">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>510</y>
-     <width>93</width>
+     <x>960</x>
+     <y>710</y>
+     <width>131</width>
      <height>51</height>
     </rect>
    </property>
@@ -43,16 +28,70 @@
     </font>
    </property>
    <property name="text">
-    <string>Ok</string>
+    <string>Save</string>
    </property>
   </widget>
-  <widget class="QScrollArea" name="scrollArea">
+  <widget class="QPushButton" name="exerciseDai_add_bt">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>80</y>
-     <width>351</width>
-     <height>481</height>
+     <x>970</x>
+     <y>210</y>
+     <width>131</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Add</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="exerciseDai_back_bt">
+   <property name="geometry">
+    <rect>
+     <x>1110</x>
+     <y>50</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>8</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>back</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>170</y>
+     <width>291</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Current choose exercise</string>
+   </property>
+  </widget>
+  <widget class="QScrollArea" name="exerciseDai_scrollArea">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>230</y>
+     <width>611</width>
+     <height>541</height>
     </rect>
    </property>
    <property name="widgetResizable">
@@ -63,127 +102,39 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>349</width>
-      <height>479</height>
+      <width>609</width>
+      <height>539</height>
      </rect>
     </property>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>20</y>
-       <width>231</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_3">
-     <property name="geometry">
-      <rect>
-       <x>252</x>
-       <y>20</y>
-       <width>71</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>add</string>
-     </property>
-    </widget>
    </widget>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QComboBox" name="exerciseDai_search_cb">
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>30</y>
-     <width>201</width>
-     <height>31</height>
+     <y>91</y>
+     <width>611</width>
+     <height>41</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="exerciseDai_delete_bt">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>30</y>
-     <width>41</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>O-</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>30</y>
-     <width>81</width>
-     <height>31</height>
+     <x>970</x>
+     <y>310</y>
+     <width>131</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>16</pointsize>
+     <pointsize>10</pointsize>
     </font>
    </property>
    <property name="text">
-    <string>search</string>
+    <string>Delete</string>
    </property>
-  </widget>
-  <widget class="QScrollArea" name="scrollArea_2">
-   <property name="geometry">
-    <rect>
-     <x>410</x>
-     <y>80</y>
-     <width>261</width>
-     <height>411</height>
-    </rect>
-   </property>
-   <property name="widgetResizable">
-    <bool>true</bool>
-   </property>
-   <widget class="QWidget" name="scrollAreaWidgetContents_2">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>259</width>
-      <height>409</height>
-     </rect>
-    </property>
-    <widget class="QPushButton" name="pushButton_4">
-     <property name="geometry">
-      <rect>
-       <x>182</x>
-       <y>20</y>
-       <width>61</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Delete</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_3">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>20</y>
-       <width>161</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
-   </widget>
   </widget>
  </widget>
  <resources/>
